--- a/style.css
+++ b/style.css
@@ -10,6 +10,172 @@
 	body { font-size: 14px; font-weight:normal; line-height:24px; }
 
 	/*----*****---- << Nuevos estilos >> ----*****----*/
+	/*---modulo perdir taxi-----*/
+
+	.contenedor_modulo{
+		width: 100%;
+		position: fixed;
+		bottom: 4px;
+		background:transparent;
+		z-index: 9999;
+		display: inline; 
+	  }
+	  .container-contenido{
+		width: 34%;
+		margin: 0 auto !important;
+		padding: 0;
+		background-color: #fff;
+		box-shadow: 2px 2px 5px rgba(142, 162, 189, 0.2);
+		border-radius: 18px;
+	  
+	  }
+	  .contenedor_items_modulo{
+		width: 64%;
+		margin: 0 auto;
+	}
+	.posicion {
+		display: inline-flex;
+	}
+	.miga li{
+		height: 30px;
+		  margin-top: 18px;
+		  margin-left: 24px;
+		  margin-right: 24px;
+		  margin-bottom: 10px;
+		  width: 30px;
+		  background-color: #d8d8d8;
+		  border-radius: 25px;
+		  color: #fff;
+		  line-height: 2.2;
+		  /*padding-left: 7px;*/
+		  font-size:14px;
+		  padding-bottom: 0px !important; 
+	  }
+	  .active{
+		background-color: #f0b556 !important;
+	  }
+	  .texto_centro {
+		text-align: center;
+		color:#3f4149;
+		font-weight: 600;
+		font-size: 12px;
+	}
+	.btn-toggle {
+		height: 50px;
+		line-height: 50px;
+		font-size: 24px;
+		font-weight: bold;
+		color: #000;
+		display: block;
+		background: #e6e6e6;
+		text-align: center; }
+	.btn-toggle:hover {
+		  text-decoration: none; 
+	}
+	.wrap {
+		width: 90%;
+		max-width: 1000px;
+		margin: auto;
+		text-align: left; }
+	  
+	  .main {
+		width: 100%;
+		min-height: 1500px; }
+	  
+	  .seccionToggle {
+		display: none;
+		height: 30vh;
+		background: #fff;
+		color: #001F3F;
+		padding: 10px 0;
+		text-align: center; }
+		.seccionToggle h2 {
+		  font-size: 60px;
+		  margin-top: 50px; }
+		.seccionToggle p {
+		  font-size: 20px;
+		  margin-bottom: 50px; }
+		.seccionToggle button {
+		  background: none;
+		  font-size: 20px;
+		  font-weight: bold;
+		  padding: 20px 40px;
+		  display: inline-block;
+		  border: 5px solid #001F3F;
+		  transition: 0.3s all ease; }
+		  .seccionToggle button:hover {
+			border: 5px solid #0074D9;
+			color: #0074D9; }
+
+			.contenido_info{
+				display: inline-flex;
+				width: 100%;
+				padding-top: 5px;
+				  padding-bottom: 5px;
+			  }
+			  .foto_usuario img{
+				width: 34px;height: 34px;display: block;border-radius: 10px;
+			  }
+			  .conte_Icon{
+				width: 34px;
+				height: 34px;
+				display: block;
+				background-color: #f0b556;
+				border-radius: 10px;
+			  }
+			  .icono_phone{
+				color: #fff;
+				line-height: 2.4 !important;
+				font-size: 14px;
+				padding-left: 9px;
+			  }
+			  .taxi_icono img{
+				width:44px;
+				padding-top: 10px;
+			  
+			  }
+			  .texto_info{
+				font-size: 14px;
+				font-weight: 500;
+				padding-left: 22px;
+				padding-top: 8px;
+				color: #1c203d;
+			  }
+			  .texto_info_2{
+				font-size: 14px;
+				font-weight: 500;
+				padding-left: 14px;
+				padding-top: 8px;
+				color: #1c203d;
+			  }
+			  .ruta_destino{
+				list-style-type: none;
+				list-style-position: outside;
+			  }
+			  .ruta_destino li{
+				display: block;
+				  line-height: 24px;
+				  padding-left: 20px;
+				  position: relative;
+				  margin-top: 20px;
+				  font-size: 14px;
+			  }
+			  .ruta_destino li:before{
+				  font-family: FontAwesome;
+				  content: "\f834";
+				  font-style: normal;
+				  font-weight: normal;
+				  text-decoration: inherit;
+				  font-size: 14px;
+				  position: absolute;
+				  top: 1px;
+				  left: 0;
+			  }
+
+
+
+
+	/*--- fin modulo perdir taxi-----*/
 	.contenedor_app_viajero{
 	padding: 10px 20px;
 	background: linear-gradient(rgba(255, 255, 255, 0.3),rgba(255, 255, 255, 0.6));
