--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@
 	.img_mujer-ayuda{
 	position: absolute;
     left: -130px;
-    top: -5px;
+    top: -25px;
     width: 100%;
     display: block;
 	}
@@ -477,7 +477,7 @@
 		
 	h1, h2, h3, h4, h5, h6 { font-weight:normal; }	
 	
-	h1{ font-size:40px; line-height:normal; margin-bottom:20px; }
+	h1{ font-size:40px; line-height:normal;/* margin-bottom:20px; */}
 	h2{ font-size:25px; line-height:normal; margin-bottom:15px; }
 	h3{ font-size:20px; line-height:normal; margin-bottom:px; }
 	h4{ font-size:16px; line-height:normal; margin-bottom:10px; }
